syntax = "proto3";

option csharp_namespace = "Generated";

message OperationResponse
{
	int32 result = 1; 
}