syntax = "proto3";

option csharp_namespace = "Generated";

message SumRequest
{
	int32 FirstOperand = 1;
	int32 SecondOperand = 2;
}